# django-lorem-sample

./: README.md  pyproject.toml
lorem_sample/: manage.py
lorem_sample/lorem_app/: apps.py  views.py
lorem_sample/lorem_app/templates/: index.html
lorem_sample/lorem_sample/: asgi.py  settings.py  urls.py  wsgi.py
